--- a/WPF 1semGruppe5/DataWindow.xaml
+++ b/WPF 1semGruppe5/DataWindow.xaml
@@ -21,8 +21,8 @@
             </DataGrid.Columns>
         </DataGrid>
         <DataGrid HorizontalAlignment="Left" Height="297" Margin="391,67,0,0" VerticalAlignment="Top" Width="381"/>
-        <Button Content="Nedluk" Background="red" HorizontalAlignment="Left" Margin="395,380,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Påføre restriktioner" Background="Yellow" HorizontalAlignment="Left" Margin="485,380,0,0" VerticalAlignment="Top" Width="113"/>
-        <Button Content="Åben" Background="Green" HorizontalAlignment="Left" Margin="611,380,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Nedluk" HorizontalAlignment="Left" Margin="395,380,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Påføre restriktioner" HorizontalAlignment="Left" Margin="485,380,0,0" VerticalAlignment="Top" Width="113"/>
+        <Button Content="Åben" HorizontalAlignment="Left" Margin="611,380,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </Window>
