anbefalinger af restriktioner eller lukning

--- a/WPF 1semGruppe5/DataWindow.xaml
+++ b/WPF 1semGruppe5/DataWindow.xaml
@@ -7,12 +7,12 @@
         mc:Ignorable="d"
         Title="DataWindow" Height="450" Width="800" Closing="Window_Closing" ResizeMode="NoResize">
     <Grid>
-        <TextBox Name="inciBox" HorizontalAlignment="Left" Margin="169,72,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="180" IsReadOnly="True"/>
-        <TextBox Name="smitteBox" HorizontalAlignment="Left" Margin="169,110,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="180" IsReadOnly="True"/>
-        <Label Content="Incidenstal" HorizontalAlignment="Left" Margin="39,67,0,0" VerticalAlignment="Top"/>
-        <Label Content="Udviklingen af smitte" HorizontalAlignment="Left" Margin="39,105,0,0" VerticalAlignment="Top"/>
-        <Label Content="Data for" FontSize="17" FontWeight="DemiBold" HorizontalAlignment="Left" Margin="39,22,0,0" VerticalAlignment="Top"/>
-        <Label Name="komNavnTxt" Content="" FontSize="17" FontWeight="DemiBold" HorizontalAlignment="Left" Margin="112,22,0,0" VerticalAlignment="Top"/>
+        <TextBox Name="inciBox" HorizontalAlignment="Left" Margin="169,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="180" IsReadOnly="True"/>
+        <TextBox Name="smitteBox" HorizontalAlignment="Left" Margin="169,85,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="180" IsReadOnly="True"/>
+        <Label Content="Incidenstal" HorizontalAlignment="Left" Margin="39,49,0,0" VerticalAlignment="Top"/>
+        <Label Content="Udviklingen af smitte" HorizontalAlignment="Left" Margin="39,80,0,0" VerticalAlignment="Top"/>
+        <Label Content="Data for" FontSize="17" FontWeight="DemiBold" HorizontalAlignment="Left" Margin="39,10,0,0" VerticalAlignment="Top"/>
+        <Label Name="komNavnTxt" Content="" FontSize="17" FontWeight="DemiBold" HorizontalAlignment="Left" Margin="112,10,0,0" VerticalAlignment="Top"/>
         <Label Content="Brancher" FontSize="17" FontWeight="DemiBold" HorizontalAlignment="Left" Margin="391,22,0,0" VerticalAlignment="Top"/>
         <Label Content="Antal smittede pr dag" HorizontalAlignment="Left" Margin="39,146,0,0" VerticalAlignment="Top"/>
         <DataGrid Name="dataGrid" HorizontalAlignment="Left" Height="235" Margin="169,154,0,0" VerticalAlignment="Top" Width="180" AutoGenerateColumns="False" ColumnWidth="*">
@@ -48,5 +48,6 @@
         <Button Content="Nedluk" Background="#FF5555" HorizontalAlignment="Left" Margin="391,380,0,0" VerticalAlignment="Top" Width="75" Click="LukningButton_Click"/>
         <Button Content="Påføre restriktioner" Background="Yellow" HorizontalAlignment="Left" Margin="481,380,0,0" VerticalAlignment="Top" Width="113" Click="RestriktionButton_Click"/>
         <Button Content="Åben" Background="LightGreen" HorizontalAlignment="Left" Margin="611,380,0,0" VerticalAlignment="Top" Width="75" Click="AabningButton_Click"/>
+        <Label Name="advarsel" Content="" HorizontalAlignment="Left" Margin="164,123,0,0" VerticalAlignment="Top" Foreground="Red"/>
     </Grid>
 </Window>
